Add Cockroach support, with flyway integration

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.application.name=restaraunt_review
+server.port=1234
+
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost:26257/restaraunt_review?sslmode=disable
+db.username=restaraunt_review
+db.password=test
 
