--- a/api/build.gradle
+++ b/api/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services:2.5.6'
+	implementation 'org.springframework.security:spring-security-core:5.6.0'
 	implementation 'org.postgresql:postgresql:42.3.1'
 	implementation 'org.flywaydb:flyway-core:8.0.2'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
