--- a/api/build.gradle
+++ b/api/build.gradle
@@ -19,15 +19,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.5.6'
-	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc:2.6.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services:2.5.6'
 	implementation 'org.springframework.security:spring-security-core:5.6.0'
 	implementation 'org.postgresql:postgresql:42.3.1'
 	implementation 'org.flywaydb:flyway-core:8.0.2'
+	implementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
 }
 
 test {
